--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-selenium = "*"
 wget = "*"
 scikit-learn = "==1.2.2"
 beautifulsoup4 = "*"
 pandas = "*"
+requests = "*"
 
 [dev-packages]
 
