--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -20,8 +20,16 @@
         }
     ],
     "browser_action": {
-        "default_popup": "src/popup.html",
-        "default_icon": {}
+        "default_popup": "",
+        "default_icon": {
+            "16": "src/icons/icon.png",
+            "48": "src/icons/icon.png",
+            "128": "src/icons/icon.png"
+        }
     },
-    "icons": {}
+    "icons": {
+        "16": "src/icons/icon.png",
+        "48": "src/icons/icon.png",
+        "128": "src/icons/icon.png"
+    }
 }
